--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "wp-plugin",
-  "version": "1.0.0",
+  "name": "m-chart-highcharts-library",
   "devDependencies": {
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.6.0",
