--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "grunt-sass": "^3.1.0",
     "grunt-scss-lint": "^0.5.0",
     "grunt-wp-readme-to-markdown": "^2.0.1",
-    "matchdep": "^1.0.1",
-    "node-sass": "^5.0.0"
+    "matchdep": "^1.0.1"
   },
   "dependencies": {
     "grunt": "^1.4.0"
