--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "m-chart-highcharts-library",
   "devDependencies": {
-    "dart-sass": "^1.25.0",
+    "grunt-dart-sass": "^2.0.1",
     "grunt-contrib-compress": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-sass": "^3.1.0",
     "grunt-scss-lint": "^0.5.0",
-    "grunt-wp-readme-to-markdown": "^2.0.1",
-    "matchdep": "^1.0.1"
+    "grunt-wp-readme-to-markdown": "^2.1.0",
+    "matchdep": "^2.0.0"
   },
   "dependencies": {
     "grunt": "^1.4.0"
